feat: add api imitation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page__content bg-black min-h-screen antialiased flex flex-col">
   
     <header class="header page__section">
-      <img src="<%=require('./assets/logo.svg')%>" alt="Логотип проекта" class="logo header__logo">
+      <!-- <img src="<%=require('./assets/logo.svg')%>" alt="Логотип проекта" class="logo header__logo"> -->
 
       <section class="search page__section">
         <div class="search__form">
