feat: add more products in data

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <template id="card-template">
     <li class="product__item card">
       <img class="card__image" src="" alt="" />
-      <div class="card__description flex justify-between items-center bg-white px-5 py-6.25">
+      <div class="card__description flex justify-between items-center bg-gray-300 px-5 py-6.25">
         <h2 class="card__title max-w-55 text-[20px] leading-7.25 overflow-hidden whitespace-nowrap overflow-ellipsis m-0">
         </h2>
       </div>
