--- a/index.html
+++ b/index.html
@@ -1,72 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="module" src="/src/index.ts"></script>
-  <link rel="stylesheet" href="/src/styles/style.css" />
-  <title>Shop</title>
-</head>
-<body>
-  <div class="page__content bg-black min-h-screen antialiased flex flex-col">
-  
-    <header class="header page__section">
-      <section class="search page__section">
-        <div class="search__form" id="search-form" role="search">
-          <input 
-          class="search__input"
-          type="text"
-          name="search"
-          placeholder="Поиск товаров..."
-          aria-label="Поиск товаров по названию"
-          autocomplete="off"
-          >
-          <button class="search__button" type="submit" aria-label="Найти">Найти</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="/src/index.ts"></script>
+    <link rel="stylesheet" href="/src/styles/style.css" />
+    <title>Shop</title>
+  </head>
+  <body>
+    <div class="page__content bg-black min-h-screen antialiased flex flex-col">
+      <header class="header page__section">
+        <section class="search page__section">
+          <div class="search__form" id="search-form" role="search">
+            <input
+              class="search__input"
+              type="text"
+              name="search"
+              placeholder="Поиск товаров..."
+              aria-label="Поиск товаров по названию"
+              autocomplete="off"
+            />
+            <button class="search__button" type="submit" aria-label="Найти">Найти</button>
+          </div>
+        </section>
+      </header>
+
+      <main class="content shrink-0 grow">
+        <section class="products page__section">
+          <ul class="products__list"></ul>
+        </section>
+      </main>
+
+      <footer class="footer page__section">
+        <p class="footer__copyright">© 2026 Zolotogornaya Maria</p>
+      </footer>
+
+      <div class="popup">
+        <div class="popup__content">
+          <button type="button" class="popup__close"></button>
+          <div class="popup__layout">
+            <img src="" alt="" class="popup__image" />
+            <div class="popup__info">
+              <h2 class="popup__title"></h2>
+              <p class="popup__description"></p>
+              <p class="popup__price"></p>
+              <button class="popup__buy-button" type="button">Купить</button>
+            </div>
+          </div>
         </div>
-      </section>
-    </header>
-
-    <main class="content shrink-0 grow">
-    
-      <section class="products page__section">
-        <ul class="products__list">
-        </ul>
-      </section>
-    </main>
-
-    <footer class="footer page__section">
-      <p class="footer__copyright">
-      © 2026 Zolotogornaya Maria
-      </p>
-    </footer>
-
-  
-    <div class="popup">
-      <div class="popup__content">
-        <button type="button" class="popup__close"></button>
-        <div class="popup__layout">
-        <img src="" alt="" class="popup__image">
-        <div class="popup__info">
-      <h2 class="popup__title"></h2>
-      <p class="popup__description"></p>
-      <p class="popup__price"></p>
-      <button class="popup__buy-button" type="button">Купить</button>
-    </div>
-    </div>
       </div>
     </div>
 
-  </div>
-
-  <template id="card-template">
-    <li class="product__item card">
-      <img class="card__image" src="" alt="" />
-      <div class="card__description flex justify-between items-center bg-gray-300 px-5 py-6.25">
-        <h2 class="card__title max-w-55 text-[20px] leading-7.25 overflow-hidden whitespace-nowrap overflow-ellipsis m-0">
-        </h2>
-      </div>
-    </li>
-  </template>
-
-</body>
+    <template id="card-template">
+      <li class="product__item card">
+        <img class="card__image" src="" alt="" />
+        <div class="card__description flex flex-col bg-gray-300 px-5 py-6.25">
+          <h2
+            class="card__title max-w-55 text-[20px] leading-7.25 overflow-hidden whitespace-nowrap overflow-ellipsis m-0"
+          ></h2>
+          <p class="card__price text-xl font-bold text-black m-0"></p>
+        </div>
+      </li>
+    </template>
+  </body>
 </html>
